--- a/Entrega IV/Re-escalando-musica.html
+++ b/Entrega IV/Re-escalando-musica.html
@@ -24,7 +24,7 @@ class="cmr-12">Celia Rubio Madrigal</span></div>
     </div>
 <!--l. 69--><p class="indent" >    Tras la serie de artículos <span 
 class="cmti-10x-x-109">Serialismo y matem</span><span 
-class="cmti-10x-x-109">ática </span>que ha ido de septiembre a noviembre de 2019,
+class="cmti-10x-x-109">áticas </span>que ha ido de septiembre a noviembre de 2019,
 Celia Rubio, su autora, me presentó un cuarto texto, <span 
 class="cmti-10x-x-109">Re-escalando m</span><span 
 class="cmti-10x-x-109">úsica</span>. Este texto constituye la
